# aikit

./: .gitignore  Cargo.toml  README.md  SECURITY.md  aikit.config.example.json  build.rs
.github/workflows/: ci.yml
docs/: agent-integration-examples.md  agent-usage.md  aikit-cli-spec.md  aikit-implementation-plan.md  implementation-manifest.md
docs/decisions/: 0001-create-aikit.md
src/: batch.rs  cli.rs  config.rs  diff.rs  env.rs  errors.rs  formats.rs  inventory.rs  main.rs  output.rs  output_cmd.rs  repo.rs  review.rs  run.rs  scan.rs  script.rs  version.rs
src/policy/: mod.rs  script.rs
tests/: cli_batch.rs  cli_diff.rs  cli_env.rs  cli_integration.rs  cli_inventory.rs  cli_output.rs  cli_repo.rs  cli_review.rs  cli_run_script.rs  cli_scan.rs  cli_script.rs  cli_version.rs
