[package]
name = "aikit"
version = "0.1.0"
edition = "2021"
description = "Personal compiled CLI for deterministic AI-agent workflow support."
publish = false

[[bin]]
name = "aikit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
sha2 = "0.10"
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
