[package]
name = "aikit"
version = "0.1.0"
edition = "2021"
description = "A local CLI for deterministic AI-assisted repository workflows."
license = "MIT"
repository = "https://github.com/Tim-Butterfield/aikit"
readme = "README.md"
keywords = ["ai", "cli", "workflow", "review", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "aikit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
sha2 = "0.10"
ignore = "0.4"
globset = "0.4"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
